# ProjRigel

./: .gitignore  .gitmodules  LICENSE  README.md  build.bat  generate.bat
Rigel/: CMakeLists.txt
Rigel/legacy/rgcore/: CMakeLists.txt
Rigel/legacy/rgcore/include/rgcore/: rg_font.h  rg_log.h  rg_math.h  rg_module_dlltest.h  rg_utility.h  rg_window.h  rg_window_windows.h  rgcore.h
Rigel/legacy/rgcore/source/: rg_log.cpp  rg_math.cpp  rg_module_font.cpp  rg_pluginbase.cpp  rg_pluginmanager.cpp  rg_window.cpp  rg_window_manager.cpp
Rigel/legacy/rggraphics/: CMakeLists.txt
Rigel/legacy/rggraphics/include/rggraphics/: rg_blend_state.h  rg_buffer.h  rg_graphics_display_mode.h  rg_graphicscontext.h  rg_inputlayout.h  rg_material.h  rg_render_context.h  rggraphics.h
Rigel/legacy/rggraphics/include/rggraphics/directx11/: rg_command_list_dx11.h  rg_depthstencil_state_dx11.h  rg_rasterizer_state_dx11.h  rg_shaderDX11.h  rg_texture_dx11.h
Rigel/legacy/rggraphics/source/: rg_blend_state.cpp  rg_buffer.cpp  rg_depthstencil_state.cpp  rg_graphicsAPI.cpp  rg_inputlayout.cpp  rg_rasterizer_state.cpp  rg_render_target.cpp  rg_sampler.cpp  rg_shader.cpp
Rigel/legacy/rggraphics/source/directx11/: rg_blend_state_dx11.cpp  rg_graphicsContextDX11.cpp  rg_rasterizer_state_dx11.cpp  rg_render_context_dx11.cpp  rg_sampler_dx11.cpp  rg_shaderDX11.cpp
Rigel/legacy/rggui/: CMakeLists.txt
Rigel/legacy/rggui/include/rggui/: rg_gui_bind_graphics.h  rg_gui_component.h  rg_gui_context.h  rg_gui_glyph.h  rg_gui_state.h
Rigel/legacy/rggui/source/: rg_gui.cpp  rg_gui_bind_graphics.cpp  rg_gui_state.cpp  rg_gui_style.cpp
Rigel/legacy/rgtest/include/: rgtest_rgcore.h
Rigel/legacy/rgtest/source/: rgtest.cpp  rgtest_rgcore.cpp
Rigel/legacy/rigel_editor/: CMakeLists.txt
Rigel/legacy/rigel_editor/include/rgeditor/: app.h  app_graphics.h  rgeditor_testsuit.h  rgeditor_window.h
Rigel/legacy/rigel_editor/source/: app.cpp  app_graphics.cpp  editor_gui.cpp  main.cpp  rgeditor_debugwindow.cpp  rgeditor_testsuit.cpp  rgeditor_window.cpp
Rigel/legacy/rigel_engine/: CMakeLists.txt
Rigel/legacy/rigel_engine/include/rgengine/: rgengine_application.h  rgengine_external_adapter.h  rgengine_graphics.h  rgengine_window.h
Rigel/legacy/rigel_engine/source/: rgengine_application.cpp  rgengine_include.cpp
Rigel/legacy/rigel_launcher/: CMakeLists.txt
Rigel/resources/Data/Res/: ps.hlsl  ps_font.hlsl  tex.tga  vs.hlsl
Rigel/rgcore/: CMakeLists.txt
Rigel/rgcore/include/rgcore/: rg_image_loader.h  rg_log.h  rg_utility.h  rg_window.h  rg_windowManager.h  rg_windowWindows.h  rg_window_manager.h  rgcore.h
Rigel/rgcore/source/: rg_image.cpp  rg_image_loader.cpp  rg_log.cpp  rg_utility.cpp  rg_windowManager.cpp  rg_windowWindows.cpp  rg_window_windows.cpp
Rigel/rggraphics/: CMakeLists.txt
Rigel/rggraphics/include/rggraphics/: rg_graphicsAPI.h  rg_graphicscontext.h  rg_texture.h  rg_viewport.h  rggraphics.h  rggraphics_inc.h
Rigel/rggraphics/include/rggraphics/directx11/: rg_graphicsContextDX11.h
Rigel/rggraphics/source/: rg_graphicscontext.cpp  rg_texture.cpp
Rigel/rggraphics/source/directx11/: rg_bufferDX11.cpp  rg_command_list_dx11.cpp  rg_depthstencil_state_dx11.cpp  rg_graphicsContextDX11.cpp  rg_texture_dx11.cpp
Rigel/rggui/: CMakeLists.txt
Rigel/rggui/include/rggui/: rg_gui.h  rg_gui_context.h  rg_gui_glyph.h
Rigel/rggui/source/: rg_gui_context.cpp  rg_gui_glyph.cpp
Rigel/rgtest/: CMakeLists.txt
Rigel/rgtest/include/: rgtest.h
Rigel/rgtest/source/: rgtest.cpp
Rigel/rigel_editor/: CMakeLists.txt
Rigel/rigel_editor/include/rgeditor/: app_graphics.h  rgeditor_enginerunner.cpp  rgeditor_enginerunner.h  stdafx.h
Rigel/rigel_editor/source/: app.cpp  app_graphics.cpp  editor_gui.cpp  rgeditor_debugwindow.cpp
Rigel/rigel_engine/: CMakeLists.txt
Rigel/rigel_engine/include/rgengine/: rgengine_application.h  rgengine_external_adapter.h  rgengine_graphics.h  rgengine_include.h  rgengine_window.h
Rigel/rigel_engine/source/: rgengine_application.cpp  rgengine_graphics.cpp  rgengine_window.cpp
Rigel/rigel_launcher/: CMakeLists.txt
Rigel/rigel_launcher/source/: rglauncher.cpp
Rigel/src/rgeditor/: CMakeLists.txt
Rigel/src/rgeditor/include/rgeditor/: rgeditor.h  rgeditor_core.h  rgeditor_egui.h  rgeditor_module.h
Rigel/src/rgeditor/source/: rgeditor.cpp  rgeditor_core.cpp  rgeditor_egui.cpp  rgeditor_module.cpp
Rigel/src/rgengine/: CMakeLists.txt
Rigel/src/rgengine/source/: rgengine.cpp
RigelEg/: .gitignore  RigelEngine.sln
RigelEg/RigelCore/: AssemblyInfo.cpp  EditorApp.cpp  EditorApp.h  GrphicsBackend.cpp  GrphicsBackend.h  RigelAPI.cpp  RigelAPI.h  RigelAPIgui.cpp  RigelAPIgui.h  RigelCore.vcxproj  RigelCore.vcxproj.filters  RigelEditorApp.cpp  RigelEditorApp.h  RigelEditorGUI.cpp  RigelEditorGUI.h  Stdafx.cpp  Stdafx.h  cImguiImplDX11.cpp  cImguiImplDX11.h  cRigelEditorApp.cpp  cRigelEditorApp.h  cRigelGrphicsBackend.cpp  cRigelGrphicsBackend.h  cRigelGuiUtil.cpp  cRigelGuiUtil.h  cRigelProject.cpp  cRigelProject.h  cRigelUtil.cpp  cRigelUtil.h
RigelEg/RigelEngine/: Program.cs  RigelEngine.csproj
RigelEg/ThirdPart/: .gitignore
Rigel_x64/: ps.hlsl  rigel.bat  vs.hlsl
rigel/: .gitignore  app.cpp  app.h  rigel.sln  rigel.vcxproj  rigel.vcxproj.filters
rigel/app/: app.cpp  app.h  app_graphics.cpp  app_graphics.h  editor_gui.cpp  editor_gui.h  main.cpp  rgeditor_debugwindow.cpp  rgeditor_debugwindow.h  rgeditor_testsuit.cpp  rgeditor_testsuit.h  rgeditor_window.cpp  rgeditor_window.h  stdafx.h
rigel/ipch/: .gitignore
rigel/rgcore/: .gitignore  rg_font.cpp  rg_font.h  rg_image.cpp  rg_image.h  rg_image_loader.cpp  rg_image_loader.h  rg_image_provider.cpp  rg_inc.h  rg_log.cpp  rg_log.h  rg_math.cpp  rg_math.h  rg_module_dlltest.cpp  rg_module_font.cpp  rg_module_font.h  rg_pluginbase.cpp  rg_pluginbase.h  rg_pluginmanager.cpp  rg_pluginmanager.h  rg_signal.hpp  rg_utility.cpp  rg_utility.h  rg_window.cpp  rg_window.h  rg_windowManager.cpp  rg_windowManager.h  rg_windowWindows.cpp  rg_windowWindows.h  rgcore.cpp  rgcore.h  rgcore.vcxproj  (+1 more)
(+107 files in other folders)
